# prompt-inspector

./: .gitignore  Prompt-Optimizer-Framework.md  README.md  app.py  pyproject.toml  test_api.py
exports/audit-design-system-in-figma-a-20260613-112053/: audit-design-system-in-figma-a-evals.json  audit-design-system-in-figma-a-guardrails.md  audit-design-system-in-figma-a-report.md  audit-design-system-in-figma-a.md  manifest.json
exports/build-a-complete-deeply-resear-20260612-150814/: build-a-complete-deeply-resear-evals.json  build-a-complete-deeply-resear-guardrails.md  build-a-complete-deeply-resear-report.md  build-a-complete-deeply-resear.md  manifest.json
exports/create-a-digital-artwork-20260612-164558/: create-a-digital-artwork-evals.json  create-a-digital-artwork-guardrails.md  create-a-digital-artwork-report.md  create-a-digital-artwork.md  manifest.json
exports/create-a-persona-20260612-232448/: create-a-persona-evals.json  create-a-persona-guardrails.md  create-a-persona-report.md  create-a-persona.md  manifest.json
src/: analyzer.py  cli.py  exporter.py  improver.py  models.py  optimizer.py  stress_tester.py  utils.py
tests/: test_exporter.py  test_pipeline.py
web/: README.md  app.js  documentation.html  index.html  styles.css
