[project]
name = "prompt-inspector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "openai>=2.41.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "textstat>=0.7.13",
    "tenacity>=9.0.0",
    "fastapi>=0.136.3",
    "uvicorn>=0.29.0",
]

